network_policy/xm-ai/merge/jupyter/jupyter_allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: jupyter-can-be-accessed-by-nginx
  namespace: pre-xmai-jupyter
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          logic_zone: manager
      podSelector:
        matchLabels:
          app: nginx-xiamen
